--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@
 }
 
 .heading-img {
-    width: 100%;
-    height: 100vh;
+    /* width: 50%; */
+    height: 40vh;
     left: 801px;
     top: 83px;
     position: absolute;
@@ -57,7 +57,7 @@
     width: 312px;
     height: 312px;
     border-radius: 10px;
-    margin-right: 50px;
+    margin-right: 30px;
 
 }
 
@@ -69,10 +69,10 @@
     font-size: 20px;
     line-height: 30px;
     margin-top: 25px;
-    margin-left: 25px;
+    margin-left: 30px;
     color: black;
     border: 1px solid #FFFFFF;
-    width: 252px;
+    width: 242px;
     height: 64px;
     background: #FFFFFF;
     border-radius: 10px;
@@ -127,4 +127,89 @@
     margin-left: 48%;
     margin-top: 30px;
     display: none;
+}
+
+footer {
+    background: #161616;
+    width: 100%;
+    height: 60vh;
+}
+
+.footer-links {
+    color: white;
+}
+
+.footer-links h1 {
+    text-align: center;
+    padding-top: 150px;
+    margin-bottom: 35px;
+}
+
+hr {
+    width: 80%;
+    border: 1px solid #FFFFFF1A
+}
+
+.links {
+    display: flex;
+    margin-left: 22%;
+    margin-top: 50px;
+
+}
+
+.links h6 {
+    margin-left: 70px;
+    font-size: 16px;
+    color: #B9B9B9;
+
+}
+
+.social {
+    margin-top: 16px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    /* height: 32px; */
+    gap: 15px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.fa-instagram {
+    /* margin-right: 16px; */
+    /* color: white; */
+    background: #343453;
+    color: #FFFFFF;
+    opacity: 1;
+    padding: 7px;
+    border-radius: 50%;
+
+}
+
+.fa-dribbble {
+    /* margin-right: 16px; */
+    background: #343453;
+    color: #FFFFFF;
+    opacity: 1;
+    padding: 7px;
+    border-radius: 50%;
+}
+
+.fa-twitter {
+    /* margin-right: 16px; */
+    background: #343453;
+    color: #FFFFFF;
+    opacity: 1;
+    padding: 7px;
+    border-radius: 50%;
+}
+
+.fa-youtube {
+    background: #343453;
+    color: #FFFFFF;
+    opacity: 1;
+    padding: 7px;
+    border-radius: 50%;
+
 }
