--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .header {
     display: flex;
     background-color: black;
-    width: 80%;
+    width: 100%;
     height: 75vh;
     margin-left: 150px;
     border-radius: 30px;
@@ -13,12 +13,12 @@
 
 .heading-text {
     color: white;
-    margin-top: 111px;
-    margin-left: 116px;
+    margin-top: 90px;
+    margin-left: 90px;
 }
 
 .heading-text h1 {
-    font-size: 70px;
+    font-size: 65px;
     line-height: 80px;
 }
 
@@ -40,7 +40,7 @@
     /* width: 50%; */
     height: 40vh;
     left: 801px;
-    top: 83px;
+    top: 188px;
     position: absolute;
 
 }
@@ -50,11 +50,12 @@
     grid-template-columns: repeat(3, 1fr);
     row-gap: 20px;
     column-gap: 20px;
+    margin-bottom: 20px;
 }
 
 .upcoming {
     background-color: black;
-    width: 312px;
+    width: 342px;
     height: 312px;
     border-radius: 10px;
     margin-right: 30px;
@@ -69,7 +70,7 @@
     font-size: 20px;
     line-height: 30px;
     margin-top: 25px;
-    margin-left: 30px;
+    margin-left: 20px;
     color: black;
     border: 1px solid #FFFFFF;
     width: 242px;
@@ -77,9 +78,6 @@
     background: #FFFFFF;
     border-radius: 10px;
     text-align: center;
-    align-items: center;
-
-
 }
 
 #red {
@@ -96,6 +94,8 @@
 
 .tamplates {
     border: 1px solid #E8E8E8;
+    width: 312px;
+    height: 362px;
 
 }
 
@@ -131,8 +131,8 @@
 
 footer {
     background: #161616;
-    width: 100%;
-    height: 60vh;
+    width: 1600px;
+    height: 444px;
 }
 
 .footer-links {
@@ -211,5 +211,256 @@ hr {
     opacity: 1;
     padding: 7px;
     border-radius: 50%;
+
+}
+
+
+/* media quaries for tablet devices */
+@media only screen and (min-width: 491px) and (max-width:768px) {
+
+    .header {
+        width: 700px;
+        height: 410px;
+        margin-left: 50px;
+    }
+
+    .heading-text {
+        margin-left: 60px;
+        margin-top: 20px;
+    }
+
+    .heading-text h1 {
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+    /* .mobile {
+        display: none;
+    } */
+
+    .heading-text p {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    .heading-text p span {
+        display: none;
+    }
+
+    .watch-btn {
+        width: 161px;
+        height: 48px;
+    }
+
+    .heading-img {
+        position: absolute;
+        width: 323px;
+        height: 340px;
+        left: 400px;
+        top: 78px;
+    }
+
+
+
+
+
+
+    .match-tamplates {
+        flex-direction: column;
+    }
+
+    /* .upcoming {
+        display: none;
+    } */
+    .upcoming {
+        top: 10px;
+        width: 0;
+        height: 0;
+        background: none;
+        margin-bottom: 100px;
+        /* display: none; */
+    }
+
+    .match-link h3 {
+        border: 1px solid black;
+        /* width: 230px;
+        height: 64px; */
+        margin-right: 20px;
+        padding: 5px 30px;
+        font-size: 20px;
+        line-height: 30px;
+
+    }
+
+    .red {
+        border: 1px solid;
+        width: 30px;
+
+    }
+
+    .match-link {
+        /* width: 150px;
+        height: 50px; */
+        display: flex;
+    }
+
+    .grid-tamp {
+        margin-top: 50px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .hidden-btn {
+        margin-top: 40px;
+        margin-bottom: 50px;
+        display: block;
+    }
+
+    footer {
+        width: 100%;
+        height: 70vh;
+    }
+
+    .footer-links h1 {
+        padding-top: 60px;
+        font-size: 40px;
+        line-height: 60px;
+    }
+
+    .links {
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        margin-left: 50px;
+    }
+
+
+
+
+
+
+}
+
+
+/* media quries for mobile devices */
+@media only screen and (max-width: 490px) {
+    .header {
+        flex-direction: column;
+        width: 364px;
+        height: 592px;
+        margin-left: 20px;
+    }
+
+    .heading-text {
+        margin-left: 20px;
+        margin-top: 15px;
+    }
+
+    .heading-text h1 {
+        font-size: 22px;
+        line-height: 33px;
+        text-align: center;
+        justify-content: center;
+    }
+
+    /* .mobile {
+        display: flex
+    }
+
+    .media {
+        display: none;
+    } */
+
+    .heading-text h1 span {
+        word-wrap: wrap;
+    }
+
+    .heading-text p {
+        font-size: 14px;
+        line-height: 24px;
+        text-align: center;
+    }
+
+    .heading-text p span {
+        display: none;
+    }
+
+    .watch-btn {
+        margin-left: 80px;
+        width: 161px;
+        height: 40px;
+        font-size: 15px;
+        line-height: 23px;
+        text-align: center;
+    }
+
+    .heading-img {
+
+        width: 233px;
+        height: 245px;
+        left: 54px;
+        top: 259px;
+    }
+
+    .match-link h3 {
+        padding: 10px 15px;
+        width: 174px;
+        height: 30px;
+        text-align: center;
+        border: 1px solid black;
+    }
+
+    #red {
+        width: 160px;
+        height: 48px;
+    }
+
+    .upcoming {
+        background: none;
+        margin-left: 30px;
+    }
+
+    .match-tamplates {
+        flex-direction: column;
+        margin-left: 10px;
+    }
+
+    .grid-tamp {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .tamplates {
+        width: 312px;
+    }
+
+    footer {
+        width: 385px;
+        height: 582px;
+        margin-top: 30px;
+    }
+
+    .footer-links h1 {
+        font-size: 22px;
+        line-height: 33px;
+        padding-top: 50px;
+    }
+
+    .links {
+        margin-left: 0px;
+        text-align: center;
+        margin-top: 10px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .links h6 {
+        margin-left: 20px;
+        margin-top: 5px;
+    }
+
+    .social {
+        margin-left: 18px;
+    }
 
 }
